--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
     "ionicons": "^6.0.3",
+    "mobile-web-capture": "^17.3.1",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
