--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "ncp node_modules/mobile-web-capture/dist public/dwt-resources && vue-cli-service serve",
+    "build": "ncp node_modules/mobile-web-capture/dist public/dwt-resources && vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
@@ -43,6 +43,7 @@
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.3.1",
+    "ncp": "^2.0.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
   },
