--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "DocumentScanner",
   "version": "0.0.1",
   "private": true,
+  "description": "An Ionic project",
   "scripts": {
     "serve": "ncp node_modules/mobile-web-capture/dist public/dwt-resources && vue-cli-service serve",
     "build": "ncp node_modules/mobile-web-capture/dist public/dwt-resources && vue-cli-service build",
@@ -20,6 +21,7 @@
     "core-js": "^3.6.5",
     "ionicons": "^6.0.3",
     "mobile-web-capture": "^17.3.1",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
@@ -31,6 +33,7 @@
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0-rc.1",
     "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
     "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
@@ -46,6 +49,5 @@
     "ncp": "^2.0.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
-  },
-  "description": "An Ionic project"
+  }
 }
