--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "description": "An Ionic project",
-  "vue":{
-    "pwa":{
-      "workboxOptions":{
+  "vue": {
+    "pwa": {
+      "workboxOptions": {
         "maximumFileSizeToCacheInBytes": 1073741824
       }
     }
@@ -18,6 +18,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@capacitor/android": "4.6.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.0",
     "@capacitor/haptics": "4.1.0",
