--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@awesome-cordova-plugins/android-permissions": "^6.2.0",
     "@capacitor/android": "4.6.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.0",
+    "@capacitor/filesystem": "^4.1.4",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
+    "@capacitor/share": "^4.1.0",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "cordova-plugin-android-permissions": "^1.1.5",
     "core-js": "^3.6.5",
     "ionicons": "^6.0.3",
     "mobile-web-capture": "^17.3.1",
