--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/core": "4.6.0",
     "@capacitor/filesystem": "^4.1.4",
     "@capacitor/haptics": "4.1.0",
+    "@capacitor/ios": "4.6.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/share": "^4.1.0",
     "@capacitor/status-bar": "4.1.1",
