--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "capacitor-plugin-camera": "^2.0.2",
+    "capacitor-plugin-dynamsoft-document-normalizer": "^3.1.1",
+    "image-cropper-component": "^2.6.4",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
