add buttons to delete images and save scanned images as pdf

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@capacitor/app": "6.0.1",
     "@capacitor/core": "6.1.2",
+    "@capacitor/filesystem": "^6.0.1",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
+    "@capacitor/share": "^6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
@@ -23,6 +25,7 @@
     "capacitor-plugin-dynamsoft-document-normalizer": "^3.1.1",
     "image-cropper-component": "^2.6.4",
     "ionicons": "^7.0.0",
+    "jspdf": "^2.5.2",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
